add v2 docs and remove v1 docs
