# app/Http/Controllers/API/V1/WeeklyNewsController.php
@@ -32,17 +32,6 @@ class WeeklyNewsController extends Controller
         $this->baseUrl = config('app.distrowatch_url');
     }
 
-
-    /**
-     * @OA\Get(
-     *     path="/api/weekly",
-     *     tags={"News"},
-     *     summary="Get all weekly news",
-     *     description="Warning!, big size response",
-     *     operationId="getAllWeeklyNews",
-     *     @OA\Response(response="200", description="Success")
-     * )
-     */
     public function index()
     {
         return Cache::remember('allWeeklyNews', 86400, function () {
@@ -64,27 +53,6 @@ class WeeklyNewsController extends Controller
         });
     }
 
-
-    /**
-     * @OA\Get(
-     *     path="/api/weekly/{id}",
-     *     tags={"News"},
-     *     summary="Get weekly news information detail",
-     *     description="If {weekly_id} not found, distrowatch.com will return the latest weekly news. make sure {weekly_id} is correct",
-     *     operationId="getWeeklyNewsById",
-     *     @OA\Response(response="200", description="Success"),
-     *     @OA\Parameter(
-     *          name="id",
-     *          description="Weekly News Id",
-     *          required=true,
-     *          in="path",
-     *          example="20210719",
-     *          @OA\Schema(
-     *              type="integer"
-     *          )
-     *     ),
-     * )
-     */
     public function show($id)
     {
         // 1 day
